# internal/dtos/requests/enemies/update_request.go
@@ -1,0 +1,11 @@
+package enemies
+
+type UpdateRequest struct {
+	Name         string `json:"name"`
+	Level        int    `json:"level"`
+	Class        string `json:"class"`
+	Description  string `json:"description"`
+	Hp           int    `json:"hp"`
+	Experience   int    `json:"experience"`
+	QuantityDeck int    `json:"quantity_deck"`
+}
